--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,24 @@
 *.exe
 *.out
 *.app
+file1.txt
+file2.txt
+file3.txt
+file4.txt
+file5.txt
+file11.txt
+file22.txt
+file33.txt
+file44.txt
+file55.txt
+file111.txt
+file222.txt
+file333.txt
+file444.txt
+file555.txt
+fileT1.txt
+fileT2.txt
+fileT3.txt
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
